--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 .element {
     width: 2%;
     height: 100%;
-    background-color: #7FBEC5;
+    background-color: #849192;
     border: solid 1px #566573;
     border-bottom: #7FBEC5;
     border-radius: 0px 0px 10px 10px;
