--- a/style.css
+++ b/style.css
@@ -3,13 +3,35 @@
     padding: 0px;
 }
 
+body {
+    display: flex;
+    flex-direction: row;
+}
+
 #visualization-container {
-    margin: auto;
     margin-top: 16px;
+    margin-left: 16px;
     width: 1000px;
     height: 500px;
     background-color: #EDDFDD;
     border-radius: 16px;
+}
+
+#log-container {
+    width: 200px;
+    height: 500px;
+    padding: 16px;
+    margin-top: 16px;
+    margin-left: 16px;
+    background-color: #EDDFDD;
+    border-radius: 16px;
+    text-align: center;
+    overflow-wrap: break-word;
+}
+
+#logs {
+    text-align: left;
+    margin-top: 16px;
 }
 
 #algorithm-type {
@@ -32,4 +54,13 @@
     border: solid 1px #566573;
     border-bottom: #7FBEC5;
     border-radius: 0px 0px 10px 10px;
+}
+
+#buttonContainer {
+    text-align: center;
+    margin-top: 8px;
+}
+
+button {
+    padding: 4px;
 }
