--- a/style.css
+++ b/style.css
@@ -1,68 +1,87 @@
 * {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 body {
-    display: flex;
-    flex-direction: row;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: row;
+  padding: 16px;
 }
 
 #visualization-container {
-    margin-top: 16px;
-    margin-left: 16px;
-    width: 1000px;
-    height: 500px;
-    background-color: #EDDFDD;
-    border-radius: 16px;
+  margin-top: 16px;
+  width: 80%;
+  height: 500px;
+  background-color: #eddfdd;
+  border-radius: 16px;
 }
 
 #log-container {
-    width: 200px;
-    height: 500px;
-    padding: 16px;
-    margin-top: 16px;
-    margin-left: 16px;
-    background-color: #EDDFDD;
-    border-radius: 16px;
-    text-align: center;
+  width: 20%;
+  height: 500px;
+  padding: 16px;
+  margin-top: 16px;
+  margin-left: 16px;
+  background-color: #eddfdd;
+  border-radius: 16px;
+  text-align: center;
 }
 
 #logs {
-    text-align: left;
-    margin-top: 16px;
-    height: 400px;
-    overflow-wrap: break-word;
-    overflow-y: auto;
+  text-align: left;
+  margin-top: 16px;
+  height: 400px;
+  overflow-wrap: break-word;
+  overflow-y: auto;
 }
 
 #algorithm-type {
-    text-align: center;
-    padding-top: 16px;
+  text-align: center;
+  padding-top: 16px;
 }
 
 #array {
-    width: 100%;
-    height: 400px;
-    margin-top: 16px;
-    display: flex;
-    flex-direction: row;
+  width: 100%;
+  height: 400px;
+  margin-top: 16px;
+  display: flex;
+  flex-direction: row;
 }
 
 .element {
-    width: 2%;
-    height: 100%;
-    background-color: #849192;
-    border: solid 1px #566573;
-    border-bottom: #7FBEC5;
-    border-radius: 0px 0px 10px 10px;
+  width: 2%;
+  height: 100%;
+  background-color: #849192;
+  border: solid 1px #566573;
+  border-bottom: #7fbec5;
+  border-radius: 0px 0px 10px 10px;
 }
 
 #buttonContainer {
-    text-align: center;
-    margin-top: 8px;
+  text-align: center;
+  margin-top: 8px;
 }
 
 button {
-    padding: 4px;
+  padding: 4px;
+}
+
+@media only screen and (max-width: 999px) {
+  body {
+    flex-direction: column;
+  }
+
+  #visualization-container {
+    width: 100%;
+    height: auto;
+    padding-bottom: 16px;
+  }
+
+  #log-container {
+    width: 100%;
+    margin-left: 0px;
+  }
 }
